kubernetes/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-app
  template:
    metadata:
      labels:
        app: http-app
    spec:
      containers:
      - name: http-app
        image: fportalesmat/request-http:latest
        ports:
        - containerPort: 5000
