kubernetes/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-app-service
spec:
  selector:
    app: http-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
